fixed hover color to match dark mode better

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   a:hover {
     text-align: center;
     border-bottom: 0.4em solid var(--color-accent);
-    background-color: oklch(from var(--color-accent) 95% 5% h);
+    background-color: color-mix(in oklch, var(--color-accent), canvas 85%); /*oklch(from var(--color-accent) 95% 5% h);*/
   }
 
   input, textarea, button {
